--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>He&#39;re the list of games we chose:</p>
 <ul>
 <li><a href="https://roma104.github.io/Games_Roma/">Monkie King: The Hero is Back</a><br>is a game from 2019 based on the movie under the same name, following Sun Wukong, the Monkey King on his quest.<br>It&#39;s focused on telling the story and fight&#39;s with smaller and bigger oponents.</li>
-<li><a href=""></a>  </li>
+<li><a href="https://jakubkromka55.github.io/strona/">Racing games</a> <br> Welcome to our website dedicated to racing games! We have prepared descriptions of two amazing titles that will introduce you to the world of exciting races: <br> </li>
 <li><a href=""></a> </li>
 <li><a href=""></a> </li>
 <li><a href=""></a> </li>
